--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,8 @@
-doctype html
-html(lang="ko")
-    head
-        title Wetube
-    body
-        h1 Welcome to Wetube
-        footer &copy; 2021 Wetube
+extends base.pug
+
+
+
+block content
+    h1 home
+    input(placeholer="fdsfs")
+    button send
