--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,11 +1,15 @@
 doctype html
 html(lang="ko")
-    head
-        title #{PpageTitle} | Wetube
-        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
-        
-    body
-       main
-            block content
-    include partials/footer.pug
-       
+  head
+    title #{ pageTitle } | Wetube
+    link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+  body
+    header
+      h1= pageTitle
+      nav
+        ul
+          li
+            a(href="/videos/upload") Upload Video
+    main
+      block content
+  include partials/footer
