--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,8 +2,7 @@ extends base
 include mixins/video
 
 block content
-  h2 Welcome
-  each potato in videos 
-    +video(potato)
-  else
-    li not found
+    each video in videos
+        +video(video)
+    else
+        li Sorry nothing found.
