--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,10 @@
-extends base
+extends base.pug
 
 block content
-  form(method="POST")
-    input(placeholder="Title", required, type="text", name="title")
-    input(value="Upload Video", type="submit") 
+    if errorMessage
+        span=errorMessage
+    form(method="POST")
+        input(placeholder="Title", required, type="text", name="title", maxlength=80)
+        input(placeholder="Description", required, type="text", name="description", minlength=20)
+        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
+        input(type="submit", value="Upload Video")
