--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,10 +2,10 @@ doctype html
 html(lang="ko")
     head
         title #{pageTitle} | #{siteName}
-        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body
         header
-            h1=pageTitle
+            h1= pageTitle
             nav
                 ul
                     li
@@ -14,17 +14,19 @@ html(lang="ko")
                         li
                             a(href="/videos/upload") Upload Video
                         li
-                            a(href="/users/edit") Edit Profile
+                            a(href=`/users/${loggedInUser._id}`) My Profile
                         li
-                            a(href="/users/logout")  Log Out
+                            a(href="/users/edit") #{loggedInUser.name} Profile
+                        li
+                            a(href="/users/logout") Log Out
                     else
                         li
-                            a(href="/join")  Join
+                            a(href="/join") Join
                         li
-                            a(href="/login")  Login                        
+                            a(href="/login") Login
                     li
                         a(href="/search") Search
-                    
+
         main
             block content
     include partials/footer
